--- a/Expert.WebShop.Zavrsni/Pages/Details.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Details.razor
@@ -26,7 +26,12 @@
                 <p class="card-text"><small class="text-body-secondary">Cijena: @prod.ProductPrice €</small></p>
                 @if (@prod.Discount > 0)
                 {
-                    <p class="card-text"><small class="text-body-secondary">Popust: @prod.Discount %</small></p>  
+                    <p class="card-text"><small class="text-body-secondary">Popust: @prod.Discount %</small></p>
+                    var discount = ((Convert.ToDouble(prod.Discount) / 100) *
+                    Convert.ToDouble(prod.ProductPrice));
+
+                    var result = Math.Round(Convert.ToDouble(prod.ProductPrice) - discount, 2);
+                    <p class="card-text"><small class="text-body-secondary">Cijena sa popustom: @result €</small></p>
                 }
                 <RadzenButton Click="(()=> {shoppingCart.AddToShoppingCart(prod.Id); ShowNotification(prod.ProductName); })" Text="Dodaj u košaricu"></RadzenButton>
             </div>
