fix količine i css

--- a/Expert.WebShop.Zavrsni/Pages/Index.razor
+++ b/Expert.WebShop.Zavrsni/Pages/Index.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>WebShop | Expert</PageTitle>
 
-<h1 style="text-align:center">Dobrodošli u WebShop</h1>
+<h1 style="text-align:center; margin-bottom:100px">Dobrodošli u WebShop</h1>
 
 <div class="card-group">
 <div class="container text-center">
