--- a/Expert.WebShop.Zavrsni/Areas/Admin/Pages/CategoryAdd.razor
+++ b/Expert.WebShop.Zavrsni/Areas/Admin/Pages/CategoryAdd.razor
@@ -32,7 +32,7 @@
         </div>
         <div class="mb-3">
             <label for="hidden" class="form-label">Is hidden?</label>
-            <input type="checkbox" @bind-value="categories.IsHidden" class="form-control" id="hidden">
+            <input type="checkbox" @bind-value="categories.IsHidden" class="form-check-label" id="hidden">
            
         </div>
         
