--- a/Expert.WebShop.Zavrsni/wwwroot/css/ZavrsniSeminar.css
+++ b/Expert.WebShop.Zavrsni/wwwroot/css/ZavrsniSeminar.css
@@ -1,12 +1,24 @@
 ﻿body{
-    display:flex;
-    align-content:center;
+   
+}
+
+h3{
     text-align:center;
+    margin-bottom:100px;
 }
 
 .forma {
     display: flex;
-    width: 50%;
+    width: 70%;
     justify-content: center;
     margin: auto;
 }
+
+.forma button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+img {
+    background-image:url("../slike/360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg");
