--- a/Expert.WebShop.Zavrsni/wwwroot/css/ZavrsniSeminar.css
+++ b/Expert.WebShop.Zavrsni/wwwroot/css/ZavrsniSeminar.css
@@ -21,4 +21,5 @@ h3{
     }
 
 img {
-    background-image:url("../slike/360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg");
+    background-image: url("../slike/360_F_499933117_ZAUBfv3P1HEOsZDrnkbNCt4jc3AodArl.jpg");
+}
